# recipe-app-api

./: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: checks.yml
app/app/: calc.py  settings.py  tests.py  urls.py
app/core/: admin.py  models.py
app/core/management/commands/: wait_for_db.py
app/core/migrations/: 0001_initial.py  0002_rename_is_stuff_user_is_staff.py  0003_recipe.py  0004_rename_titile_recipe_title.py  0005_auto_20231216_1624.py  0006_recipe_image.py
app/core/tests/: test_admin.py  test_commands.py  test_models.py
app/recipe/: serializers.py  urls.py  views.py
app/recipe/tests/: test_recipe_api.py  test_tags_api.py
app/user/: serializers.py  urls.py  views.py
app/user/tests/: test_user_api.py
